- slightly changed priorities of constraint handlers
- command line syntax changed to support batch modus without piping stdin with "<" or "|" operators
- now, conflict constraints are also created if they were generated in strong branching or diving with insertion depth
  equal to the current depth
- advanced command line syntax:
  -l <logfile>  : copy output into log file
  -s <settings> : load parameter settings (.set) file
  -f <problem>  : load and solve problem file
  -b <batchfile>: load and execute dialog command batch file (can be used multiple times)
  -c "command"  : execute single line of dialog commands (can be used multiple times)
- added removal of bound-redundant rows from the LP during root node LP solving loop

fixed bugs:
- fixed bug with invalid lazy updates after a restart where the LP is not solved again (e.g., due to all variables
  being fixed)
- fixed bug in MPS file reader with OBJSENSE
- fixed numerical bug in SCIPrealToRational() [thanks to Anders Schack-Nielsen]
- fixed bug in crossover heuristic with negative timelimit
- fixed bugs resulting from inactive general integer variables being member of the variable bounds array of a variable
- removed bug in conflict analysis with wrong redundancy check
- fixed bug that unexpected end of stdin (Ctrl-D or piped-in file without "quit" command) gives a segmentation fault
- fixed bug in knapsack constraint disaggregation that may lead to acceptance of infeasible solutions
- fixed bug with inconsistent data structures after a global bound was changed at a local subproblem and the
  local bounds are not contained anymore in the new global bounds


SCIP version 0.81
=================

examples:
- added two small pricer examples (for C and C++)
- updated example code (s.t. it compiles again)

interface:
- new method SCIPgetCuts()
- callback method CONSSEPA of constraint handler was split into two methods CONSSEPALP and CONSSEPASOL